# EDIpack

./: .buildinfo  CITATION.cff  CMakeLists.txt  README.md  TODO  browsecode.html  dependencies.html  edipack.html  edipack2ineq.html  edipack_cbindings.html  edipack_python.html  examples.html  f-modindex.html  genindex.html  index.html  installation.html  objects.inv  quickstart.html  search.html  searchindex.js  structure.html
.doctrees/: browsecode.doctree  dependencies.doctree  edipack.doctree  edipack2ineq.doctree  edipack_cbindings.doctree  edipack_python.doctree  examples.doctree  index.doctree  installation.doctree  quickstart.doctree  structure.doctree
_sources/: edipack_cbindings.rst.txt  installation.rst.txt
c_bindings/: 01_vars.html  02_funcs.html
cmake/: FortranCompilerConfig.cmake  MainConfig.cmake  PostConfig.cmake
doc/: browsecode.rst  conf.py  dependencies.rst  edipack2ineq.rst  edipack_cbindings.rst  edipack_python.rst  examples.rst  index.rst  installation.rst
edipack/: 01_edipackmodule.html  02_main.html  05_sectors.html  06_bath.html  08_diag.html  (+7 more)
src/singlesite/ED_SUPERC/: CMakeLists.txt  ED_DIAG_SUPERC.f90  ED_GF_SUPERC.f90  ED_HAMILTONIAN_SUPERC_DIRECT_HxV.f90  ED_HAMILTONIAN_SUPERC_STORED_HxV.f90  ED_KRYLOV_SUPERC.f90  ED_OBSERVABLES_SUPERC.f90  ED_RDM_SUPERC.f90
src/singlesite/ED_SUPERC/direct/: HxV_eph.f90  HxV_ph.f90  HxVbath.f90  HxVimp.f90  HxVint.f90
src/singlesite/ED_SUPERC/stored/: H_e_ph.f90  H_ph.f90  Hbath.f90  Himp.f90  Hint.f90
src/singlesite/ED_SUPERC/stored_mpi/: H_e_ph.f90  H_ph.f90  Hbath.f90  Himp.f90  Hint.f90
(+578 files in other folders)
